--- a/src/Pages/LandingPage/LandingPage.css
+++ b/src/Pages/LandingPage/LandingPage.css
@@ -22,11 +22,6 @@
     text-transform: capitalize;
 }
 
-#herosearch{
-    padding: 1rem 3rem;
-    border: none;
-}
-
 .inputdiv{
     border: 2px solid white;
     border-radius: 90px;
@@ -34,8 +29,24 @@
     justify-content: space-between;
     align-items: center;
     margin: 0 20rem;
+    padding: 0.5rem;
+}
+
+#herosearch{
+    padding: 1rem 3rem;
+    border: none;
+    background-color: rgba(255, 255, 255, 0);
+    flex: 80%;
+}
+
+#herosearch::placeholder{
+    letter-spacing: 0.225em;
+    color: white;
+    font-weight: 500;
+    /* font-size: 1.5rem; */
 }
 
 .searchicon{
     width: 3rem;
+    cursor: pointer;
 }
