--- a/src/Components/Locationcard/Locationcard.css
+++ b/src/Components/Locationcard/Locationcard.css
@@ -1,5 +1,25 @@
-.headd{
-    padding: 5rem;
-    border: 1px solid;
-    color: red;
+.cardcontainer{
+    width: 20rem;
+    height: 15rem;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.cardcontainer:hover{
+    width: 21.5rem;
+    height: 16.5rem;
+   transition-timing-function: linear;
+   /* transform: scale(2,2); */
+}
+.cardcontent{
+    padding: 5rem 0;
+    color: white;
+    text-align: center;
+    transition: 0.5s;
+}
+
+.cardcontent:hover{
+    font-size: xx-large;
 }
