--- a/src/Pages/LandingPage/LandingPage.css
+++ b/src/Pages/LandingPage/LandingPage.css
@@ -63,3 +63,34 @@
     padding: 1.5rem 1.5rem 1.5rem 5rem;
     
 }
+
+.section2{
+    background-color: black;
+    padding: 2rem 0;
+}
+
+.section2heading, .section2subheading{
+    color: white;
+    text-align: center;
+}
+
+.section2heading{
+    font-weight: 500;
+    font-size: 3rem;
+    line-height: 2.5rem;
+}
+
+.section2subheading{
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 29px;
+    margin-bottom: 4rem;
+}
+
+.locationcarddiv{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 0 8rem;
+}
