--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -11,7 +11,7 @@
     font-style: normal;
     position: relative;
     padding: 40px 41px;
-    margin: 0 auto;
+    margin: 150px auto;
     background-color: #FFFFFF;
     z-index: 500;
 }
@@ -35,6 +35,14 @@ text-align: center;
 font-size: 14px;
 line-height: 18px;
 color: #111111;
+display: inline-block;
+margin-bottom: 9px;
+}
+.login-email-error, .login-password-error{
+    font-weight: 500;
+font-size: 14px;
+line-height: 18px;
+color: red;
 display: inline-block;
 margin-bottom: 9px;
 }
@@ -109,6 +117,27 @@ text-align: center;
     font-size: 30px;
     top: 0px;
     right: 10px;
+}
+
+@media screen and (max-width: 768px) {
+    .login-container{
+        width: 500px
+    }
+}
+@media screen and (max-width: 600px) {
+    .login-container{
+        width: 400px;
+        padding: 40px 20px;
+    }
+}
+@media screen and (max-width: 450px) {
+    .login-container{
+        width: 300px;
+        padding: 40px 10px;
+    }
+    .checkbox-label-container{
+        gap: 3px;
+    }
 }
 
 
