--- a/src/Pages/LandingPage/LandingPage.css
+++ b/src/Pages/LandingPage/LandingPage.css
@@ -39,6 +39,10 @@
     flex: 80%;
 }
 
+#herosearch:focus{
+    outline: none;
+}
+
 #herosearch::placeholder{
     letter-spacing: 0.225em;
     color: white;
@@ -172,3 +176,153 @@
     margin-bottom: 3rem;
 }
 
+.section4{
+    padding: 2rem;
+    background-color: #D9D9D9;;
+}
+
+.section4heading{
+    border: 1px solid #0B0000 ;
+    padding: 1rem 3rem;
+    background-color: #0B0000;
+    width: 7rem;
+    font-size: 2rem;
+    color: white;
+    margin: 3rem auto;
+    text-transform: uppercase;
+}
+
+.reviewcard{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 4.5rem 0;
+}
+
+.reviewcard img{
+    width: 18rem;
+    height: 16rem;
+    margin-bottom: 1rem;
+}
+
+
+@media screen and (max-width: 1125px) {
+    .inputdiv{
+        
+        margin: 0 15rem;
+      
+    }
+}
+
+
+@media screen and (max-width: 900px) {
+    .inputdiv{
+        margin: 0 12rem;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    .heroheading{
+        font-size: 3rem;
+    }
+    
+    .inputdiv{
+        margin: 0 8rem;
+        padding: 0.25rem;
+    }
+
+    #herosearch{
+        padding: 1rem;
+    }
+    .searchicon{
+        width: 2rem;
+    }
+
+    .section2heading, .section3heading{
+        font-size: 2.5rem;
+    }
+
+    .section2subheading{
+        font-size: 1rem;
+        
+    }
+    .locationcarddiv{
+        padding: 0 2rem;
+    }
+}
+
+@media screen and (max-width: 600px) {
+
+    .inputdiv{
+        margin: 0 4rem;
+    }
+
+    #herosearch::placeholder{
+        letter-spacing: 0.15em;
+    }
+
+    .section2heading, .section3heading, .section2subheading{
+        padding: 0 2rem;
+    }
+
+    .locationcarddiv{
+        justify-content: center;
+    }
+
+    .section3heading{
+        font-size: 2rem;
+    }
+
+    .carouseltext{
+     
+        font-size: 2rem;
+        line-height: 2rem;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    
+    .heroheading{
+        font-size: 2.5rem;
+    }
+
+    .inputdiv{
+        margin: 0 1.75rem;
+    }
+
+    .captiondiv{
+        width: 18rem;
+    }
+
+    .caption{
+        width: 10rem;
+        padding: 1.5rem 1.5rem 1.5rem 3.5rem;
+        font-size: 1rem;
+    }
+
+    .section2heading, .section3heading, .section4heading{
+        font-size: 1.75rem;
+    }
+
+    .section2subheading{
+        font-size: 0.75rem;
+        line-height: 1rem;
+    }
+
+    .carouseltext{
+     
+        font-size: 1.5rem;
+        line-height: 2rem;
+    }
+
+    .carousellink a, .carousellink2 a{
+        font-size: 0.75rem;
+        
+    }
+
+    #carouselarrow{
+        width: 1.25rem;
+    }
+}
