--- a/src/Pages/Catalogue/Catalogue.css
+++ b/src/Pages/Catalogue/Catalogue.css
@@ -1,3 +1,72 @@
+* {
+ padding: 0;
+ margin: 0;
+}
 .heroSection{
- background-image: url(../../Assets/CatalogueHero.png);
+background-image: url(../../Assets/CatalogueHero.png);
+height: 281px;
+}
+
+.searchSection{
+ padding-top: 55px;
+ display: flex;
+ padding-left: 149px;
+ padding-right: 114px;
+ gap: 30px;
+ align-items: center;
+ padding-bottom: 44px;
+ border-bottom: 4px solid #F4F2F2;
+}
+.ops{
+ width: 104px ;
+ height: 40px;
+ background: rgba(217, 217, 217, 0.9);
+border-radius: 90px;
+ outline: none;
+ border: none;
+ font-family: Inter;
+font-size: 18px;
+font-weight: 400;
+line-height: 22px;
+letter-spacing: 0em;
+/* text-align: center; */
+padding-left: 10px;
+
+}
+.catalogueSearch{
+ width: 512px;
+ height: 50px;
+ border: 2px solid #0B0000;
+border-radius: 90px;
+background-color: transparent;
+display: flex;
+align-items: center; 
+}
+.searchBox{
+ width: 265px;
+height: 22px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 22px;
+text-align: center;
+color: rgba(11, 0, 0, 0.5);
+margin: 14px 186.5px 14px 15px;
+background-color: transparent;
+outline: none;
+border: none;
+}
+
+.opsort{
+ background-color: transparent;
+ outline: none;
+ border: none;
+ font-family: Inter;
+font-size: 18px;
+font-weight: 400;
+line-height: 22px;
+letter-spacing: 0em;
+text-align: center;
+
 }
