Restyling the Navbar component

--- a/src/Components/NavBar/navBar.css
+++ b/src/Components/NavBar/navBar.css
@@ -1,39 +1,55 @@
 .navBar{
- display: flex;
- align-items: center;
- background-color: #fff;
- padding-left: 111px;
- padding-right: 122px;
- height: 60px;
-
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5rem 3rem;
+    background-color: rgba(255, 255, 255, 0.4);
 }
+
+.navlogo{
+    border: 1px solid;
+ 
+}
+
 .menuList{
- display: flex;
- /* justify-content: space-between; */
- gap: 2rem;
- padding-left: 200px;
+    display: flex;
+    justify-content: space-around;
+    border: 1px solid;
+    padding: 0 1rem;
 }
-li{
- list-style-type: none;
+
+.menuList a{
+    padding: 0 1rem;
 }
-a{
- color: #000;
- text-decoration: none;
- font-family: Inter;
-font-size: 18px;
-font-weight: 400;
-line-height: 22px;
-letter-spacing: 0em;
-text-align: center;
+
+.menuList li{
+    list-style-type: none;
+}
+
+.menuList a, .navbutton{
+    color: #000;
+    text-decoration: none;
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 22px;
+    text-align: center;
 
 }
-.logSig{
- padding-left: 172px;
+
+
+.menuList a:hover{
+    font-size: 20px;
+    color: white;
 }
-.log{
- border: none;
- outline: none;
- background-color: transparent;
- width: 93px;
- height: 22px;
+.navbutton{
+    border: none; 
+    background-color: rgba(255, 255, 255, 0.068);
+    padding: 0 1rem;
+    cursor: pointer;
+}
+
+#login{
+    border-right: 3px solid #FCBC0E;
+
 }
