--- a/src/Components/NavBar/navBar.css
+++ b/src/Components/NavBar/navBar.css
@@ -6,15 +6,9 @@
     background-color: rgba(255, 255, 255, 0.4);
 }
 
-.navlogo{
-    border: 1px solid;
- 
-}
-
 .menuList{
     display: flex;
     justify-content: space-around;
-    border: 1px solid;
     padding: 0 1rem;
 }
 
@@ -34,22 +28,47 @@
     font-weight: 400;
     line-height: 22px;
     text-align: center;
-
+    transition: 1s;
 }
 
 
 .menuList a:hover{
     font-size: 20px;
-    color: white;
+    font-weight: 700;
 }
+
 .navbutton{
     border: none; 
     background-color: rgba(255, 255, 255, 0.068);
-    padding: 0 1rem;
+    padding: 0.5rem 1rem;
     cursor: pointer;
 }
 
-#login{
-    border-right: 3px solid #FCBC0E;
+.navbutton:hover{
+    font-size: 20px;
+    font-weight: 700;
+    border: 2px solid #FCBC0E;
+    background-color: rgba(255, 255, 255, 0.493);
+}
 
+#login{
+    border-right: 1.5px solid #FCBC0E;
+
+}
+
+#signup{
+    border-left: 1.5px solid #FCBC0E;
+}
+
+
+@media screen and (max-width: 900px) {
+    .navlogo img{
+        width: 7rem;
+        height: 3rem;
+        padding-top: 0.5rem;
+    }
+
+    .menuList a{
+        padding: 0 0.5rem;
+    }
 }
