--- a/src/Components/Button/ViewDetailBlack/ViewBlack.css
+++ b/src/Components/Button/ViewDetailBlack/ViewBlack.css
@@ -1,5 +1,5 @@
 .viewblack{
- background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), #0B0000;
+ background:#0B0000;
 border-radius: 30px;
 width: 157px;
 height: 50px;
