--- a/src/Components/NavBar/navBar.css
+++ b/src/Components/NavBar/navBar.css
@@ -6,7 +6,7 @@
     background-color: rgba(255, 255, 255, 0.4);
 }
 
-.menuList{
+.menuList ul{
     display: flex;
     justify-content: space-around;
     padding: 0 1rem;
@@ -65,7 +65,7 @@
     display: none;
 }
 
-@media screen and (max-width: 900px) {
+/* @media screen and (max-width: 900px) {
     .navlogo img{
         width: 7rem;
         height: 3rem;
@@ -84,4 +84,56 @@
         font-size: 4rem;
         color: #FCBC0E;
     }
-}
+    
+    .menuList{
+        display: none;
+    }
+
+    .active{
+        position: absolute;
+        top: 8rem;
+        left: 0;
+        background-color: #FCBC0E;
+        width: 100vw;
+    }
+
+    .active ul{
+        display: block;
+        height: 70vh;
+        text-align: center;
+        transition: 0.5s;
+        padding: 0 2rem ;
+    }
+
+    .active li{
+        padding: 2rem 0;
+        margin: 1rem 0;
+        border-radius: 10px;
+        border: 2px solid white;
+        list-style-type: none;
+       
+    }
+    
+    .active a{
+        color: #ffffff;
+        text-decoration: none;
+        font-family: Inter;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 22px;
+        text-align: center;
+        transition: 1s;
+        padding: 2rem 0;
+        
+    }
+
+    .active li:hover{
+        background-color: #ffffff;
+        border: 2px solid black;
+    }
+
+    .active a:hover{
+        color: #FCBC0E;
+
+    }
+} */
