--- a/src/Pages/Signup/Signup.css
+++ b/src/Pages/Signup/Signup.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -5,7 +6,8 @@
     }
     
     body {
-        background-color: #0B0000;
+        background-color: #000000;
+        /* background: transparent; */
         font-family: "DM sans", sans-serif;
     }
     
@@ -78,7 +80,8 @@
     
     small {
         color: red;
-        display: block;
+        font-size: 12px;
+        font-weight: 600;
     }
     .or-opt {
         text-align: center;
