--- a/src/Components/CatalogueCard/CatalogueCard.css
+++ b/src/Components/CatalogueCard/CatalogueCard.css
@@ -1,8 +1,8 @@
 .catalogueCard{
  height: 690px;
 width: 599px;
-border-radius: 15px;
-background: rgba(217, 217, 217, 0.5);
+border-radius: 30px;
+background-color: rgba(217, 217, 217, 0.5);
 border: 2px solid red;
 }
 .catalogueImg{
@@ -21,6 +21,7 @@ height: 500px;
  justify-content: space-between;
  padding-right: 36px;
  padding-left: 18px;
+ padding-top: 20px;
 }
 
 .catalogueHead{
