--- a/src/Pages/Catalogue/Catalogue.css
+++ b/src/Pages/Catalogue/Catalogue.css
@@ -78,7 +78,8 @@ text-align: center;
  padding: 150px 115px 120px 115px;
 }
 .more{
- width: 0%;
+ width: 15%;
  margin-left: auto;
  margin-right: auto;
+ margin-bottom: 144px;
 }
