still working on the validation

--- a/src/Pages/Signup/Signup.css
+++ b/src/Pages/Signup/Signup.css
@@ -3,137 +3,155 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    }
+}
     
-    body {
-        background-color: #000000;
-        /* background: transparent; */
-        font-family: "DM sans", sans-serif;
-    }
+body {
+    background-color: #000000;
+    /* background: transparent; */
+    font-family: "DM sans", sans-serif;
+}
+.success_note {
+    color: darkgreen;
+    text-align: center;
+    display:inline-block;
+    margin: 0 auto;
+}
+
+.close_icon {
+    font-weight: bold;
+    font-size: 40px;
+    text-align: right;
     
-    h2 {
-        text-align: center;
-        font-size: 45px;
-        margin: 20px 0;
-    }
-    .p-head {
-        text-align: center;
-        font-size: 18px;
-        margin: 10px 0;
-    }
+}
+
+h2 {
+    text-align: center;
+    font-size: 45px;
+}
+
+.p-head {
+    text-align: center;
+    font-size: 18px;
+    margin: 10px 0;
+}
+
+.login-form {
+    width: 50%;
+    height: 100%;
+    margin: 0 auto;
+    background-color: #ffffff;
+    padding: 20px 40px;
+}
+
+label {
+    display: block;
+    font-weight: 600;
+}
+
+.input-wrap  {
+    margin: 25px 0;
+}
+
+input {
+    display: block;
+    width: 100%;
+    border-radius: 10px;
+    padding: 15px;
+    margin: 10px 0;
+    font-size: 16px;
+    border: 1px solid #FCBC0E;
+}
+
+.signButton {
+    width:100%;
+    padding: 15px 10px;
+    border-radius: 10px;
+    border: none;
+    background-color: #FCBC0E;
+    margin: 20px 0;
+    font-size: 20px;
+    color: #ffffff;
+}
+
+.signButton:hover {
+    background-color: #daa003;
+    cursor: pointer;
+}
+
+.signButton a {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.hav-acct {
+    text-align: center;
+    font-size: 16px;
+}
+.login {
+    font-weight: bold;
+    margin-left: 10px;
+}
+.login a {
+    text-decoration: none;
+    color: #0B0000;
+}
+
+small {
+    color: red;
+    font-size: 12px;
+    font-weight: 600;
+}
+.or-opt {
+    text-align: center;
+    margin: 15px 0;
+    line-height: 30px;
+}
+.or {
+    font-weight: bold;
+    margin: 20px 0;
+    display: inline-block;
+}
+
+.login-opt {
+    margin: 0 auto;
+    width: 90%;
+    display: flex;
+    justify-content: space-around;
+    /* padding: 10px 0;*/
+}
+.m-icon {
+    display: inline-block;
+    width:40%;
+    height: auto;
+    max-width: 50px;
+    margin: 5px 30px;
+}
+.m-icon2 {
+    max-width: 40px; 
+}
+.m-icon:hover {
+    fill: #daa003;
+    transform: scale(1.1);
+    transition: 0.5s ease
+}
     
+@media screen and (max-width: 500px) {
     .login-form {
-        width: 50%;
-        height: 100%;
-        margin: 0 auto;
-        background-color: #ffffff;
-        padding: 20px 40px;
-    }
-    
-    label {
-        display: block;
-        font-weight: 600;
-    }
-    .input-wrap  {
-        margin: 25px 0;
-    }
-    input {
-        display: block;
         width: 100%;
-        border-radius: 10px;
-        padding: 15px;
-        margin: 10px 0;
-        font-size: 16px;
-        border: 1px solid #FCBC0E;
-    }
-    .signButton {
-        width:100%;
-        padding: 15px 10px;
-        border-radius: 10px;
-        border: none;
-        background-color: #FCBC0E;
-        margin: 20px 0;
-        font-size: 20px;
-        color: #ffffff;
-    }
-    .signButton:hover {
-        background-color: #daa003;
-        cursor: pointer;
-    }
-    .signButton a {
-        text-decoration: none;
-        color: #ffffff;
-    }
-    
-    .hav-acct {
-        text-align: center;
-        font-size: 16px;
-    }
-    .login {
-        font-weight: bold;
-        margin-left: 10px;
-    }
-    .login a {
-        text-decoration: none;
-        color: #0B0000;
-    }
-    
-    small {
-        color: red;
-        font-size: 12px;
-        font-weight: 600;
-    }
-    .or-opt {
-        text-align: center;
-        margin: 30px 0;
-        line-height: 30px;
-    }
-    .or {
-        font-weight: bold;
-        margin: 20px 0;
-        display: inline-block;
-    }
-    
-    .login-opt {
-        margin: 0 auto;
-        width: 90%;
-        display: flex;
-        justify-content: space-around;
-        /* padding: 10px 0;*/
     }
     .m-icon {
-        display: inline-block;
-        width:40%;
-        height: auto;
-        max-width: 50px;
-        margin: 5px 30px;
+        max-width: 40px;
+        margin: 5px 10px;
     }
-    .m-icon2 {
-        max-width: 40px; 
+
+}
+@media screen and (max-width: 800px) {
+    .login-form {
+        width: 90%; 
     }
-    .m-icon:hover {
-        fill: #daa003;
-        transform: scale(1.1);
-        transition: 0.5s ease
+    .login-opt {
+        width: 100%;
+        padding: 30px 0;
     }
-    
-    @media screen and (max-width: 500px) {
-        .login-form {
-            width: 100%;
-        }
-        .m-icon {
-            max-width: 40px;
-            margin: 5px 10px;
-        }
-    
-    }
-    @media screen and (max-width: 800px) {
-        .login-form {
-            width: 90%; 
-        }
-        .login-opt {
-            width: 100%;
-            padding: 30px 0;
-        }
-    
-    }
+
+}
