--- a/src/Components/Overlay/Overlay.css
+++ b/src/Components/Overlay/Overlay.css
@@ -5,5 +5,6 @@
     position: fixed;
     top: 0px;
     left: 0px;
-    background-color: #FCBC0E;
+    background-color: rgba(0,0,0, 0.5);
+    cursor: pointer;
 }
