--- a/src/Pages/Catalogue/Catalogue.css
+++ b/src/Pages/Catalogue/Catalogue.css
@@ -19,7 +19,7 @@ height: 281px;
  border-bottom: 4px solid #F4F2F2;
 }
 .ops{
- width: 104px ;
+ width: 84px;
  height: 40px;
  background: rgba(217, 217, 217, 0.9);
 border-radius: 90px;
@@ -32,6 +32,28 @@ line-height: 22px;
 letter-spacing: 0em;
 /* text-align: center; */
 padding-left: 10px;
+padding-top: 7px;
+display: flex;
+gap: 10px
+
+}
+.opss{
+ width: 110px ;
+ height: 40px;
+ background: rgba(217, 217, 217, 0.9);
+border-radius: 90px;
+ outline: none;
+ border: none;
+ font-family: Inter;
+font-size: 18px;
+font-weight: 400;
+line-height: 22px;
+letter-spacing: 0em;
+/* text-align: center; */
+padding-left: 10px;
+padding-top: 7px;
+display: flex;
+gap: 10px
 
 }
 .catalogueSearch{
