--- a/src/Components/Locationcard/Locationcard.css
+++ b/src/Components/Locationcard/Locationcard.css
@@ -14,7 +14,7 @@
    /* transform: scale(2,2); */
 }
 .cardcontent{
-    padding: 5rem 0;
+    padding: 6.5rem 0 5rem 0;
     color: white;
     text-align: center;
     transition: 0.5s;
@@ -37,7 +37,7 @@
     }
     
     .cardcontent{
-        padding: 4rem 0;
+        padding: 5rem 0 4rem 0;
     }
 
     .cardcontent:hover{
