--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -4,6 +4,7 @@
     align-items: center;
     padding: 0.5rem 3rem;
     background-color: rgba(255, 255, 255, 0.4);
+    font-family: 'Inter';
 }
 
 .navbar ul{
@@ -34,7 +35,6 @@
 .navbar a, .navbutton1, .navbutton2{
     color: #000;
     text-decoration: none;
-    font-family: Inter;
     font-size: 18px;
     font-weight: 400;
     line-height: 22px;
@@ -175,7 +175,6 @@
     .active a{
         color: #ffffff;
         text-decoration: none;
-        font-family: Inter;
         font-size: 18px;
         font-weight: 400;
         line-height: 22px;
