--- a/src/Components/Review/Review.css
+++ b/src/Components/Review/Review.css
@@ -1,30 +1,21 @@
-/* .review{
- background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), #0B0000;
- color: #fff;
- font-family: Inter;
-font-size: 32px;
-font-weight: 500;
-line-height: 39px;
-letter-spacing: 0em;
-text-align: center;
-Width: 250px;
-Height: 60px;
-} */
+
 
 .review{
  padding: 2rem;
- background-color: #D9D9D9;;
+ background-color: #D9D9D9;
+ font-family: 'Inter';
 }
 
 .reviewheading{
  border: 1px solid #0B0000 ;
  padding: 1rem 3rem;
  background-color: #0B0000;
- width: 7rem;
+ width: 14rem;
  font-size: 2rem;
  color: white;
- margin: 3rem auto;
+ margin: 2.5rem auto;
  text-transform: uppercase;
+ display: block;
 }
 
 .reviewcard{
@@ -39,4 +30,12 @@ Height: 60px;
  width: 18rem;
  height: 16rem;
  margin-bottom: 1rem;
+}
+
+@media screen and (max-width: 400px) {
+
+    .reviewheading{
+        margin: 1.5rem auto;
+    }
+
 }
