--- a/src/Pages/LandingPage/LandingPage.css
+++ b/src/Pages/LandingPage/LandingPage.css
@@ -1,3 +1,7 @@
+.landingPage{
+    font-family: 'Inter';
+}
+
 .hero{
     background-image: linear-gradient(359.38deg, rgba(11, 0, 0, 0.96) 2.23%, rgba(11, 0, 0, 0.05) 41.31%, rgba(11, 0, 0, 0) 50.45%), 
                         url('../../Assets/landing-background.svg');
@@ -18,7 +22,7 @@
     font-size: 3.5rem;
     line-height: 3.5rem;
     text-align: center;
-    padding: 4rem 2rem 0 2rem;
+    padding: 6rem 2rem 2rem 2rem;
     text-transform: capitalize;
 }
 
@@ -62,9 +66,12 @@
 
 .caption{
     color: white;
-    width: 16rem;
+    width: 22rem;
     border-right: 6px solid #FCBC0E;
-    padding: 1.5rem 1.5rem 1.5rem 5rem;
+    padding: 1.5rem 0 1.5rem 5rem;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 29px;
     
 }
 
@@ -81,7 +88,8 @@
 .section2heading{
     font-weight: 500;
     font-size: 3rem;
-    line-height: 2.5rem;
+    line-height: 4.5rem;
+    text-transform: uppercase;
 }
 
 .section2subheading{
@@ -107,7 +115,6 @@
     text-align: center;
     color: #FFFFFF;
     text-transform: uppercase;
-    /* margin-bottom: 1rem; */
 }
 
 .carousel{
@@ -173,7 +180,7 @@
 
 .carousellink2{
     width: 7rem;
-    margin-bottom: 3rem;
+    margin: 3rem auto;
 }
 
 .section4{
@@ -181,7 +188,7 @@
     background-color: #D9D9D9;;
 }
 
-.section4heading{
+/* .section4heading{
     border: 1px solid #0B0000 ;
     padding: 1rem 3rem;
     background-color: #0B0000;
@@ -204,7 +211,7 @@
     width: 18rem;
     height: 16rem;
     margin-bottom: 1rem;
-}
+} */
 
 
 @media screen and (max-width: 1125px) {
@@ -240,6 +247,10 @@
         width: 2rem;
     }
 
+    .captiondiv{
+        margin-top: 3.5rem;
+    }
+
     .section2heading, .section3heading{
         font-size: 2.5rem;
     }
@@ -254,6 +265,11 @@
 }
 
 @media screen and (max-width: 600px) {
+
+    .heroheading{
+        padding: 4rem 2rem 2rem 2rem;
+
+    }
 
     .inputdiv{
         margin: 0 4rem;
@@ -288,6 +304,10 @@
         font-size: 2.5rem;
     }
 
+    .navcomponent{
+        padding-top: 0;
+    }
+    
     .inputdiv{
         margin: 0 1.75rem;
     }
@@ -297,7 +317,7 @@
     }
 
     .caption{
-        width: 10rem;
+        width: 16rem;
         padding: 1.5rem 1.5rem 1.5rem 3.5rem;
         font-size: 1rem;
     }
