--- a/src/Pages/Signup/Signup.css
+++ b/src/Pages/Signup/Signup.css
@@ -1,14 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-    
+
 body {
-    background-color: #000000;
+    /* background-color: #000000; */
     /* background: transparent; */
-    font-family: "DM sans", sans-serif;
 }
 .success_note {
     color: darkgreen;
@@ -41,6 +34,7 @@ body {
     margin: 0 auto;
     background-color: #ffffff;
     padding: 20px 40px;
+    font-family: "DM sans", sans-serif;
 }
 
 .input_label {
