--- a/src/Pages/Catalogue/Catalogue.css
+++ b/src/Pages/Catalogue/Catalogue.css
@@ -37,8 +37,80 @@ display: flex;
 gap: 10px
 
 }
+.pricebox{
+ width: 465px;
+ height: 447px;
+ background: #FFFFFF;
+ border-radius: 15px;
+ padding-left: 15px;
+ padding-top: 10px;
+ display: none;
+
+}
+.price{
+display: flex;
+}
+.minPrice{
+ height: 50px;
+width: 160px;
+border-radius: 30px;
+border: 1px solid #D9D9D9;
+display: flex;
+cursor: pointer;
+}
+.symbol{
+ padding-top: 10px;
+ padding-left: 10px;
+ padding-right: 5px;
+ font-size: 24px;
+ border-right: 1px solid #D9D9D9;
+}
+.symbols{
+ font-size: 36px;
+ align-items: center;
+}
+.min{
+ padding-top: 10px;
+ padding-left: 10px;
+ padding-right: 5px;
+ font-size: 24px;
+}
+.maxPrice{
+ height: 50px;
+width: 160px;
+border-radius: 30px;
+border: 1px solid #D9D9D9;
+display: flex;
+cursor: pointer;
+}
+.priceAmount{
+ display: flex;
+ gap: 90px;
+
+}
+.minmaxAmount{
+ padding-top: 10px;
+ padding-left: 30px;
+ font-size: 20px;
+}
+th{
+ padding-bottom: 7px;
+}
+tr{
+ padding-top: 7px;
+}
+
+.bedBox{
+ height: 115px;
+width: 682px;
+left: 2308px;
+top: -2613px;
+border-radius: 15px;
+background: #FFFFFF;
+
+}
 .opss{
- width: 110px ;
+ width: 120px ;
  height: 40px;
  background: rgba(217, 217, 217, 0.9);
 border-radius: 90px;
