--- a/src/Components/Review/Review.css
+++ b/src/Components/Review/Review.css
@@ -1,10 +1,28 @@
-
-
-.review{
+.reviewcard{
  padding: 2rem;
  background-color: #D9D9D9;
  font-family: 'Inter';
+ display: flex;
+ flex-direction: column;
+ justify-content: space-around;
+ align-items: center;
+
 }
+
+.reviewheading{
+    font-weight: 500;
+    font-size: 1rem;
+    line-height: 1rem;
+}
+
+.reviewcontent{
+    font-style: italic;
+    font-weight: 200;
+    font-size: 12px;
+    line-height: 1rem;
+}
+/* 
+
 
 .reviewheading{
  border: 1px solid #0B0000 ;
@@ -39,4 +57,4 @@
         width: 12rem;
     }
 
-}
+} */
