--- a/src/Components/Review/Review.css
+++ b/src/Components/Review/Review.css
@@ -1,11 +1,11 @@
 .reviewcard{
  padding: 2rem;
- background-color: #D9D9D9;
+
  font-family: 'Inter';
  display: flex;
  flex-direction: column;
  justify-content: space-around;
- align-items: center;
+ /* align-items: center; */
 
 }
 
@@ -13,6 +13,8 @@
     font-weight: 500;
     font-size: 1rem;
     line-height: 1rem;
+    margin: 1rem 0.2rem;
+    text-align:start;
 }
 
 .reviewcontent{
