--- a/src/Pages/LandingPage/LandingPage.css
+++ b/src/Pages/LandingPage/LandingPage.css
@@ -87,7 +87,7 @@
 
 .section2heading{
     font-weight: 500;
-    font-size: 3rem;
+    font-size: 2.5rem;
     line-height: 4.5rem;
     text-transform: uppercase;
 }
@@ -110,7 +110,7 @@
 
 .section3heading{
     font-weight: 500;
-    font-size: 3rem;
+    font-size: 2.5rem;
     line-height: 3rem;
     text-align: center;
     color: #FFFFFF;
@@ -119,7 +119,7 @@
 
 .carousel{
     width: 90vw;
-    margin: 5rem auto 0;
+    margin: 3.5rem auto ;
   }
 
 .carouseldiv1{
@@ -180,9 +180,23 @@
 
 .section4{
     padding: 2rem;
-    background-color: #D9D9D9;;
 }
 
+.section4heading{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 2rem;
+    line-height: 2.5rem;
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: 1.5rem;
+}
+
+.review{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
 
 @media screen and (max-width: 1125px) {
     .inputdiv{
