--- a/src/Components/CatalogueCard/CatalogueCard.css
+++ b/src/Components/CatalogueCard/CatalogueCard.css
@@ -9,6 +9,8 @@ border: 2px solid red;
  border-radius: 15px 15px 0px 0px;
 width: 599px;
 height: 500px;
+transition: 1s;
+cursor: pointer;
 }
 .cardContent1{
  padding-left:36px;
