Created a searchbar and 2nd navbar component

--- a/src/Components/CatalogueCard/CatalogueCard.css
+++ b/src/Components/CatalogueCard/CatalogueCard.css
@@ -75,14 +75,15 @@ text-align: center;
 
 .active{
     display: flex;
-  
+
     justify-content: space-evenly;
-    /* background-color: rgb(196, 186, 186); */
     position: absolute;
     left: 21rem;
     width: 15rem;
-    /* height: 3rem; */
-   
     transition:height 0.3s ease-in-out;
+}
+
+.shareimg{
+    cursor: pointer;
 }
 
