--- a/src/Pages/LandingPage/LandingPage.css
+++ b/src/Pages/LandingPage/LandingPage.css
@@ -26,7 +26,7 @@
     text-transform: capitalize;
 }
 
-.inputdiv{
+ .inputdiv{
     border: 2px solid white;
     border-radius: 90px;
     display: flex;
@@ -35,7 +35,7 @@
     margin: 0 20rem;
     padding: 0.5rem;
 }
-
+/*
 #herosearch{
     padding: 1rem 3rem;
     border: none;
@@ -59,7 +59,7 @@
 .searchicon{
     width: 3rem;
     cursor: pointer;
-}
+} */
 
 .captiondiv{
     background-color: black;
