--- a/src/Components/Searchbar/Searchbar.css
+++ b/src/Components/Searchbar/Searchbar.css
@@ -1,34 +1,10 @@
-/* .inputdiv{
-    border: 2px solid white;
-    border-radius: 90px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 20rem;
-    padding: 0.5rem;
-} */
-
-#herosearch{
-    padding: 1rem 3rem;
-    border: none;
-    background-color: rgba(255, 255, 255, 0);
-    flex: 80%;
-    color: white;
-    font-family: inherit;
-    font-weight: 500;
-}
-
-#herosearch:focus{
-    outline: none;
-}
-
-#herosearch::placeholder{
-    letter-spacing: 0.225em;
-    color: white;
-    font-weight: 500;
-}
-
 .searchicon{
     width: 3rem;
     cursor: pointer;
+}
+
+@media screen and (max-width: 350px) {
+    .searchicon{
+        width: 2rem;
+    }
 }
