--- a/src/Components/CatalogueNavbar/CatalogueNavbar.css
+++ b/src/Components/CatalogueNavbar/CatalogueNavbar.css
@@ -29,7 +29,9 @@
 }
 
 #demo-simple-select{
-    border: 2px solid;
+    /* border: 1px solid; */
+    border-radius: 10px;
+    text-align: center;
     /* z-index: -1; */
 }
 
