--- a/src/Components/CatalogueCard/CatalogueCard.css
+++ b/src/Components/CatalogueCard/CatalogueCard.css
@@ -1,10 +1,11 @@
- .catalogueCard{
-    height: 50rem;
-    width: 599px;
-    border-radius: 30px;
+ .catCard{
+    /* height: 50rem; */
+    width: 20rem;
+    border-radius: 20px;
     background-color: rgba(217, 217, 217, 0.5);
     font-family: 'Inter';
     border: 1px solid black;
+    
 }
 
 .catcardmaindiv{
@@ -15,7 +16,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 1rem 25rem 1rem;
+    padding: 1rem 1rem 15rem 1rem;
+    border-radius: 20px 20px 0 0;
 }
 
 /* .catcardmaindiv:hover{
@@ -26,15 +28,23 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: yellow;
+    background-color: #FCBC0E;;
     border-radius: 30px;
-    padding: 0.75rem 1rem;
-    min-width: 9rem;
+    padding: 0.5rem 1rem;
+    min-width: 7.5rem;
 }
 
+.catlocationdiv img{
+    width: 1rem;
+    
+}
+
+.imgtab{
+    width: 2.5rem;
+}
 .catlocationdiv p{
     font-weight: 500;
-    font-size: 18px;
+    font-size: 14px;
     line-height: 22px;
     text-align: center;
     
@@ -43,7 +53,7 @@
 .catcardfooterdiv{
     background: rgba(217, 217, 217, 0.5);
     border-radius:  0px 0px 30px 30px;
-    padding: 1rem 2rem;
+    padding: 0.5rem 1rem;
 }
 
 .catcardsubdiv1{
@@ -55,7 +65,7 @@
 .catcardsubdiv1 p{
     font-style: normal;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 16px;
     line-height: 29px;
     /* text-align: center; */
     display: flex;
@@ -69,7 +79,7 @@
 
 .catcardsubdiv2{
     justify-content: flex-start;
-    padding: 0.75rem 0;
+    padding: 0.5rem 0;
 }
 
 .bed-div{
@@ -86,7 +96,7 @@
 .bed-div p, .bath-div p{
     font-style: normal;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 10px;
     line-height: 22px;
     color: rgba(125, 127, 131, 0.7);
     padding: 0 0.5rem;
@@ -96,7 +106,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 1rem;
+    padding-top: 0.25rem;
 }
 
 .sharelikediv{
@@ -182,12 +192,13 @@ text-align: center;
     display: flex;
     justify-content: space-evenly;
     position: absolute;
-    left: 21rem;
-    width: 15rem;
-    transition:height 0.3s ease-in-out;
+    left: 13rem;
+    width: 10rem;
+    transition: 0.3s ease-in-out;
 }
 
 .shareimg{
     cursor: pointer;
+    width: 2rem;
 }
 
