--- a/src/Components/CatalogueNavbar/CatalogueNavbar.css
+++ b/src/Components/CatalogueNavbar/CatalogueNavbar.css
@@ -12,15 +12,15 @@
 
 .filtercontainer{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     padding: 1rem;
     flex-wrap: wrap;
 }
 
 .selectfilter{
-    width: 10rem;
-    margin: 0 1rem !important;
+    width: 8rem;
+    margin: 0 0.5rem !important;
 }
 
 #demo-simple-select-label{
