--- a/src/Pages/Catalogue/Allcatalogue.css
+++ b/src/Pages/Catalogue/Allcatalogue.css
@@ -13,6 +13,42 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin: 1rem 0;
+    margin: 2rem 0;
     /* width: 4rem; */
+}
+
+.catcardmaindiv1, .catcardmaindiv2, .catcardmaindiv3,
+.catcardmaindiv4, .catcardmaindiv5, .catcardmaindiv6{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-blend-mode: darken;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 1rem 15rem 1rem;
+    border-radius: 20px 20px 0 0;
+}
+
+.catcardmaindiv1{
+    background-image: url('../../Assets/Victoria.png');   
+}
+
+.catcardmaindiv2{
+    background-image: url('../../Assets/lekki2.png');   
+}
+
+.catcardmaindiv3{
+    background-image: url('../../Assets/lekki.png');   
+}
+
+.catcardmaindiv4{
+    background-image: url('../../Assets/maryland.png');   
+}
+
+.catcardmaindiv5{
+    background-image: url('../../Assets/ajah.png');   
+}
+
+.catcardmaindiv6{
+    background-image: url('../../Assets/Victoria.png');   
 }
