--- a/src/Components/CatalogueCard/CatalogueCard.css
+++ b/src/Components/CatalogueCard/CatalogueCard.css
@@ -1,6 +1,6 @@
  .catCard{
     /* height: 50rem; */
-    width: 20rem;
+    width: 400px;
     border-radius: 20px;
     background-color: rgba(217, 217, 217, 0.5);
     font-family: 'Inter';
