--- a/src/Pages/Catalogue/Allcatalogue.css
+++ b/src/Pages/Catalogue/Allcatalogue.css
@@ -13,6 +13,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
     margin: 2rem 0;
     /* width: 4rem; */
 }
